// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusedCardControls matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="card-container-controls"
      >
        <button
          aria-label="Move left"
          class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-left-up has-icon"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-arrow-left"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 14L7 9.97 13 6v8z"
            />
          </svg>
        </button>
        <button
          aria-label="Move right"
          class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-right-down has-icon"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-arrow-right"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6l6 4.03L8 14V6z"
            />
          </svg>
        </button>
        <span
          class="card-number-title"
        >
          Card #1
           
        </span>
        <button
          aria-label="Remove card"
          class="components-button mtb-card-buttons mtb-card-close-button has-icon"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-no"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-container-controls"
    >
      <button
        aria-label="Move left"
        class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-left-up has-icon"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-arrow-left"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 14L7 9.97 13 6v8z"
          />
        </svg>
      </button>
      <button
        aria-label="Move right"
        class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-right-down has-icon"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-arrow-right"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6l6 4.03L8 14V6z"
          />
        </svg>
      </button>
      <span
        class="card-number-title"
      >
        Card #1
         
      </span>
      <button
        aria-label="Remove card"
        class="components-button mtb-card-buttons mtb-card-close-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-no"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FocusedCardControls matches snapshot when number of cards is more than 1 and the card index less than the number of cards 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="card-container-controls"
      >
        <button
          aria-label="Move left"
          class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-left-up has-icon"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-arrow-left"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 14L7 9.97 13 6v8z"
            />
          </svg>
        </button>
        <button
          aria-label="Move right"
          class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-right-down has-icon"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-arrow-right"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6l6 4.03L8 14V6z"
            />
          </svg>
        </button>
        <span
          class="card-number-title"
        >
          Card #3
           
        </span>
        <button
          aria-label="Remove card"
          class="components-button mtb-card-buttons mtb-card-close-button has-icon"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-no"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-container-controls"
    >
      <button
        aria-label="Move left"
        class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-left-up has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-arrow-left"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 14L7 9.97 13 6v8z"
          />
        </svg>
      </button>
      <button
        aria-label="Move right"
        class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-right-down has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-arrow-right"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6l6 4.03L8 14V6z"
          />
        </svg>
      </button>
      <span
        class="card-number-title"
      >
        Card #3
         
      </span>
      <button
        aria-label="Remove card"
        class="components-button mtb-card-buttons mtb-card-close-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-no"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FocusedCardControls matches snapshot when style prop is \`list\` 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="card-container-controls"
      >
        <button
          aria-label="Move up"
          class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-left-up has-icon"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-arrow-left"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 14L7 9.97 13 6v8z"
            />
          </svg>
        </button>
        <button
          aria-label="Move down"
          class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-right-down has-icon"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-arrow-right"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 6l6 4.03L8 14V6z"
            />
          </svg>
        </button>
        <span
          class="card-number-title"
        >
          Card #1
           
        </span>
        <button
          aria-label="Remove card"
          class="components-button mtb-card-buttons mtb-card-close-button has-icon"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="dashicon dashicons-no"
            focusable="false"
            height="20"
            role="img"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-container-controls"
    >
      <button
        aria-label="Move up"
        class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-left-up has-icon"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-arrow-left"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 14L7 9.97 13 6v8z"
          />
        </svg>
      </button>
      <button
        aria-label="Move down"
        class="components-button mtb-card-buttons mtb-card-move-button mtb-card-move-button-right-down has-icon"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-arrow-right"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6l6 4.03L8 14V6z"
          />
        </svg>
      </button>
      <span
        class="card-number-title"
      >
        Card #1
         
      </span>
      <button
        aria-label="Remove card"
        class="components-button mtb-card-buttons mtb-card-close-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-no"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
